# JniDemo

app/: build.gradle
app/src/androidTest/java/itboy/jnidemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.c  native-lib.cpp
app/src/main/cpp/ffmpeg/head/libavcodec/: avcodec.h
app/src/main/cpp/ffmpeg/head/libavformat/: avformat.h
app/src/main/java/itboy/jnidemo/: MainActivity.kt
app/src/test/java/itboy/jnidemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
